--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,38 +1,29 @@
 .header {
-
-
+    text-align: center;
 }
 
-body {
-
-
-
+.headBtn {
+    text-align: center;
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
-.startBtn {
+body {}
 
-
-}
+.startBtn {}
 
 .testContainer {
     background-image: url("../images/background1.jpg");
+    border: 2em black;
     background-repeat: no-repeat;
     background-position: center;
     background-size: 75% 100%;
-    height: 500px;
- 
-
-
+    height: 100vh;
 }
 
-
-#questDisplay {
-
-
-}
-
+#questDisplay {}
 
 .results {
-
-
+    margin-top: 5em;
+    text-align: center;
 }
